--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
         <ul>
             <li>10mph 초과: <span class="penalty">벌금 $400,000 / 벌점 10점</span></li>
             <li>15mph 초과: <span class="penalty">벌금 $800,000 / 벌점 20점</span></li>
-            <li>20mph 초과: <span class="penalty">벌금 $1,500,000 / 벌점 25점</span></li>
-            <li>25mph 초과: <span class="penalty">벌금 $400,000 / 벌점 30점</span></li>
+            <li>20mph 초과: <span class="penalty">벌금 $120만 / 벌점 25점</span></li>
+            <li>25mph 초과: <span class="penalty">벌금 $150만 / 벌점 30점</span></li>
             <li>60mph 초과: <span class="penalty">벌금 300만원 / 벌점 80점</span></li>
             <li>70mph 초과: <span class="penalty">3일 밴 / 벌금 1500만원</span></li>
             <li>80mph 초과: <span class="penalty">서버 차단</span></li>
