--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         <h4>제1항 - 속도 위반</h4>
         <p><strong>제한속도 위반 시 벌금 및 벌점</strong>:</p>
         <ul>
+            <li>5mph 초과: <span class="penalty">벌금 $400,000 / 벌점 5점</span></li>
             <li>10mph 초과: <span class="penalty">벌금 $400,000 / 벌점 10점</span></li>
             <li>15mph 초과: <span class="penalty">벌금 $800,000 / 벌점 20점</span></li>
             <li>20mph 초과: <span class="penalty">벌금 $120만 / 벌점 25점</span></li>
