--- a/index.html
+++ b/index.html
@@ -185,8 +185,15 @@
         <p><strong><span class="penalty">위반 시: 벌금 $800,000 / 벌점 10점</span></strong></p>
         <p>도로를 횡단하고 있는 보행자의 통행을 방해한 경우</p>
 
-        <!-- 이전 버전 제7항 - 어린이 보호구역 위반 항목은 삭제됨 -->
+       <h4>제 7항 - 공회전</h4>
+        <p><storng><span class="penalty">위반시: 벌금 10만원</storng></p>
+       
+        <h4>제 8항 - 신호대기중 런치컨트롤</h4>
+        <p><storng><span class="penalty">위반시: 벌금 20만원</storng></p>
 
+               <h4>제 8항 - 사유지 외 드리프트</h4>
+        <p><storng><span class="penalty">위반시: 벌금 40만원</storng></p>
+        
         <h3>제49조 (모든 운전자의 준수사항 등)</h3>
 
         <h4>제1항 제1호 - 신호 위반</h4>
